--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="be.vbsteven.bmtodesk"
-      android:versionCode="10"
-      android:versionName="0.4">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+      android:versionCode="12"
+      android:versionName="0.5">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
 
     	<!--  simple activities -->
     	<activity android:name=".RegistrationActivity" />
