--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="be.vbsteven.bmtodesk"
-      android:versionCode="13"
-      android:versionName="0.5.1">
+      android:versionCode="14"
+      android:versionName="0.5.2">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
 
     	<!--  simple activities -->
@@ -22,7 +22,8 @@
         </activity>
 
         <!-- Shareactivity with intentfilter to catch "Share to" intent -->
-        <activity android:name=".ShareActivity">
+        <activity android:name=".ShareActivity"
+               	android:configChanges="orientation|keyboardHidden">
             <intent-filter>
 				<action android:name="android.intent.action.SEND" />
 				<category android:name="android.intent.category.DEFAULT" />
