--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,22 @@
 
 		<!--  Service for sending bookmarks in the background -->
         <service android:name=".BackgroundSharingService" />
+        
+        <!-- needed to accept messages from the C2DM service -->
+		<receiver android:name="be.vbsteven.bmtodesk.C2DM"
+			android:permission="com.google.android.c2dm.permission.SEND">
+			<!-- Receive the actual message -->
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				<category android:name="be.vbsteven.bmtodesk" />
+			</intent-filter>
+			<!-- Receive the registration id -->
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+				<category android:name="be.vbsteven.bmtodesk" />
+			</intent-filter>
+		</receiver>
+        
     </application>
 
     <uses-sdk android:minSdkVersion="3" />
@@ -41,6 +57,12 @@
     <!-- permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    
+    <!-- Only this application can receive the messages and registration result -->
+	<permission android:name="be.vbsteven.bmtodesk.permission.C2D_MESSAGE"
+		android:protectionLevel="signature" />
+	<uses-permission android:name="be.vbsteven.bmtodesk.permission.C2D_MESSAGE" />
 
     <!-- support all screens in the Android market -->
 	<supports-screens 
